# xmtp

./: .gitignore  .gitmodules  .markdownlint.jsonc  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE-MIT  Makefile  README.md  SECURITY.md  clippy.toml  install.ps1  install.sh  rustfmt.toml
.cargo/: config.toml
.github/: issue-body.md
.github/workflows/: cd.yml  ci.yml  ffi-build.yml  publish.yml  release.yml  rust-publish.yml  rust.yml  stale.yml
skills/xmtp-messaging/: SKILL.md
xmtp/: Cargo.toml  README.md
xmtp-cli/: Cargo.toml  build.rs
xmtp-cli/src/: app.rs  event.rs  main.rs  signer.rs  tui.rs  ui.rs  worker.rs
xmtp-cli/src/cmd/: agent.rs  config.rs  inspect.rs  mod.rs  profile.rs
xmtp-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml  rust-toolchain.toml
xmtp-ffi/.cargo/: config.toml
xmtp-ffi/include/: xmtp_ffi.h
xmtp-ffi/src/: client.rs  conversation.rs  conversations.rs  device_sync.rs  ffi.rs  identity.rs  lib.rs  signature.rs  stream.rs
xmtp-sys/: Cargo.toml  README.md  build.rs
xmtp-sys/src/: bindings.rs  lib.rs
xmtp/src/: content.rs  conversation.rs  ens.rs  error.rs  ffi.rs  ledger.rs  lib.rs  resolve.rs  signer.rs  stream.rs  types.rs
xmtp/src/client/: conversations.rs  identity.rs  mod.rs
