[workspace]
members = ["xmtp-sys", "xmtp", "xmtp-cli"]
exclude = ["xmtp-ffi"]
default-members = ["xmtp"]
resolver = "3"

[workspace.package]
version = "0.5.3"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/qntx/xmtp"
description = "Client library for the XMTP messaging protocol."

[workspace.dependencies]
xmtp = { version = "0.5", path = "xmtp" }
xmtp-sys = { version = "0.1", path = "xmtp-sys" }

alloy-ens = { version = "1.7", default-features = false, features = ["provider"] }
alloy-provider = "1.7"
alloy-signer = "1.7"
alloy-signer-ledger = "1.7"
alloy-signer-local = { version = "1.7", default-features = false }
clap = { version = "4", features = ["derive"] }
bindgen = "0.72"
dirs = "6"
flate2 = "1"
getrandom = "0.4"
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"
tar = "0.4"
prost = { version = "0.14", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
unicode-width = "0.2"
url = "2"
ureq = "3"
zip = { version = "8", default-features = false, features = ["deflate"] }
ratatui = "0.30"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[profile.dev]
debug = true
opt-level = 0

[profile.test]
opt-level = 2

[profile.ci]
debug = false
inherits = "dev"

[profile.bench]
debug = true
inherits = "release"

[workspace.lints.rust]
elided_lifetimes_in_paths = "warn"
single_use_lifetimes = "warn"
unused_lifetimes = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
variant_size_differences = "warn"
unsafe_code = "warn"
unused_qualifications = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }
unused_imports = "warn"
unused_macro_rules = "warn"
non_ascii_idents = "warn"
non_camel_case_types = "warn"
non_snake_case = "warn"
non_upper_case_globals = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"
private_intra_doc_links = "warn"
missing_crate_level_docs = "warn"
invalid_codeblock_attributes = "warn"
invalid_html_tags = "warn"
invalid_rust_codeblocks = "warn"
bare_urls = "warn"
unescaped_backticks = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
restriction = { level = "allow", priority = -1 }
dbg_macro = "warn"
print_stderr = "warn"
print_stdout = "warn"
todo = "warn"
unimplemented = "warn"
panic = "warn"
unwrap_used = "warn"
unwrap_in_result = "warn"
expect_used = "allow"
panic_in_result_fn = "warn"
indexing_slicing = "allow"
fallible_impl_from = "warn"
missing_docs_in_private_items = "allow"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"
doc_markdown = "warn"
exhaustive_enums = "allow"
exhaustive_structs = "allow"
must_use_candidate = "warn"
return_self_not_must_use = "warn"
fn_params_excessive_bools = "warn"
struct_excessive_bools = "allow"
cognitive_complexity = "warn"
too_many_lines = "allow"
excessive_nesting = "allow"
clone_on_ref_ptr = "warn"
redundant_clone = "warn"
large_types_passed_by_value = "warn"
implicit_hasher = "warn"
cast_precision_loss = "allow"
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_lossless = "warn"
future_not_send = "warn"
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
option_if_let_else = "warn"
wildcard_enum_match_arm = "allow"
match_wildcard_for_single_variants = "warn"
match_same_arms = "warn"
module_name_repetitions = "allow"
similar_names = "allow"
shadow_reuse = "allow"
shadow_same = "allow"
shadow_unrelated = "allow"
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"
significant_drop_tightening = "allow"
used_underscore_binding = "warn"
mem_forget = "warn"
