[package]
name = "xmtp-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
xmtp = { workspace = true, features = ["alloy"] }
tokio.workspace = true
unicode-width.workspace = true
ratatui.workspace = true
getrandom.workspace = true

[lints]
workspace = true
