[package]
name = "xmtp-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[[bin]]
name = "xmtp"
path = "src/main.rs"

[dependencies]
xmtp = { workspace = true, features = ["alloy", "ens", "ledger"] }
clap.workspace = true
dirs.workspace = true
tokio.workspace = true
unicode-width.workspace = true
ratatui.workspace = true
getrandom.workspace = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/xmtp-{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"

[lints]
workspace = true
